--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,11 +2,11 @@
   background-color: #ffffff, 0.4;
   backdrop-filter: blur(10px);
   padding: 25px;
-  width: 635px;
+  width: 55%;
 }
 
 .hr {
-  width: 620px;
+  width: 40%;
   position: absolute;
   left: 160px;
   color: #FFFFFF;
